--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.21.5",
-    "pg": "^8.3.3"
+    "pg": "^8.3.3",
+    "swagger-ui-express": "^4.1.4"
   }
 }
