--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Used to build backend API",
   "main": "sever.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node ./server.js",
+    "dev": "nodemon --inspect ./server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,8 @@
     "knex": "^0.21.5",
     "pg": "^8.3.3",
     "swagger-ui-express": "^4.1.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
