--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
     "pg": "^8.3.3",
+    "request": "^2.88.2",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
