--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "sever.js",
   "scripts": {
     "start": "node ./server.js",
-    "dev": "nodemon --inspect ./server.js"
+    "dev": "nodemon --inspect ./server.js",
+    "dev-brk": "nodemon --inspect-brk ./server.js"
   },
   "author": "",
   "license": "ISC",
